--- a/meson.build
+++ b/meson.build
@@ -45,7 +45,7 @@ if (enable_debug)
   add_project_arguments('-g', language: 'c')
   add_project_arguments('-g', language: 'vala')
   add_project_arguments('-DDEBUG', language: 'c')
-  #add_project_arguments('-DG_DISABLE_CAST_CHECKS', language: 'c')
+  add_project_arguments('-DG_DISABLE_CAST_CHECKS', language: 'c')
   add_project_arguments('-D', 'DEBUG', language: 'vala')
 endif
 
