--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,3 +1,4 @@
 option('video',      type: 'boolean', value: 'true')
 option('spellcheck', type: 'boolean', value: 'true')
 option('examples',   type: 'boolean', value: 'false')
+option('experimental-listbox', type: 'boolean', value: 'false')
